--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "prettier": "3.2.5",
     "stylus": "^0.63.0",
     "tailwindcss": "3.4.4",
-    "typescript": "~5.4.0",
+    "typescript": "^5.9.3",
     "vite": "^6.4.0",
-    "vue-tsc": "^2.2.12"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vue-tsc": "^3.1.3"
   }
 }
